[wip]: add stylecop files and fix indentation

--- a/Okta.Xamarin/Okta.Xamarin.Android/Okta.Xamarin.Android.csproj
+++ b/Okta.Xamarin/Okta.Xamarin.Android/Okta.Xamarin.Android.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </None>
     <None Include="Keystore\okta.xamarin.android-test\okta.xamarin.android-test.keyInfo">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
