--- a/Okta.Xamarin/Okta.Xamarin.Test/Okta.Xamarin.Test.csproj
+++ b/Okta.Xamarin/Okta.Xamarin.Test/Okta.Xamarin.Test.csproj
@@ -7,12 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="..\Okta.Xamarin\OidcClient.cs" Link="OidcClient.cs" />
     <Compile Include="..\Okta.Xamarin\OktaConfig.cs" Link="OktaConfig.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
   </ItemGroup>
