--- a/Okta.Xamarin/Okta.Xamarin.UITest.Android/Okta.Xamarin.UITest.Android.csproj
+++ b/Okta.Xamarin/Okta.Xamarin.UITest.Android/Okta.Xamarin.UITest.Android.csproj
@@ -29,6 +29,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="StyleCop.Analyzers">
+      <Version>1.1.118</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Xamarin.UITest" Version="3.0.5" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
   </ItemGroup>
@@ -40,6 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
   </ItemGroup>
   <Import Project="..\Okta.Xamarin.UITest.Shared\Okta.Xamarin.UITest.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
