--- a/Okta.Xamarin/Okta.Xamarin/Okta.Xamarin.csproj
+++ b/Okta.Xamarin/Okta.Xamarin/Okta.Xamarin.csproj
@@ -19,12 +19,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="OidcClient.cs" />
     <None Include="OktaConfig.cs" />
   </ItemGroup>
 
   <ItemGroup>  
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />  
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />  
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
   </ItemGroup>
